Updated error handling
