# docs/swagger.yaml
@@ -14,15 +14,6 @@ definitions:
     - Average
     - Sum
     - Count
-  main.HttpError:
-    properties:
-      inner_message:
-        description: Inner error message
-        type: string
-      message:
-        description: Error message
-        type: string
-    type: object
   main.HttpPartialResult:
     properties:
       aggregation:
@@ -65,10 +56,6 @@ definitions:
     type: object
   main.HttpQueryResponse:
     properties:
-      error:
-        allOf:
-        - $ref: '#/definitions/main.HttpError'
-        description: Information about the query processing error (if any)
       values:
         description: List of results of performed aggregations for individual combinations
           of grouping column values
